--- a/inventory.ini
+++ b/inventory.ini
@@ -1,4 +1,4 @@
 [rabbitmq]
-rabbit-01 ansible_host=192.168.104.140 ansible_user=support ansible_password=support@123
-rabbit-02 ansible_host=192.168.104.183 ansible_user=support ansible_password=support@123
-rabbit-03 ansible_host=192.168.104.184 ansible_user=support ansible_password=support@1233
+rabbit-01 ansible_host=13.251.156.178
+rabbit-02 ansible_host=3.1.6.204 
+rabbit-03 ansible_host=18.139.0.78  
