--- a/roles/rabbitmq_server/tasks/rabbitmq_install_debian.yml
+++ b/roles/rabbitmq_server/tasks/rabbitmq_install_debian.yml
@@ -10,17 +10,7 @@
   delay: 2
   when: ansible_distribution == "Ubuntu"
   
-- name: Install RabbitMQ packages
-  yum:
-    name: "{{ rabbitmq_distro_packages }}"
-    state: "present"
-  register: install_packages
-  until: install_packages is success
-  retries: 5
-  delay: 2
-  when: ansible_distribution == "CentOS"
-
-- name: start service rabbitmq-
+- name: start service rabbitmq
   systemd:
     name: "{{ rabbitmq_server_service }}"
     state: started
